--- a/Logical/PallindromeNumber.html
+++ b/Logical/PallindromeNumber.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
         let num = prompt('Enter a number.');
 
-        let rem,sum = 0;
+        let rem, sum = 0;
 
         let temp = num;
         while (num > 0) {
@@ -17,10 +17,10 @@
             num = num / 10;
         }
         num = temp;
-        if (num === sum) {
-            document.write(num + ' is pallindrome number.');
+        if (num === temp) {
+            document.write(num + ' is a pallindrome number.');
         } else {
-            document.write(num + ' is not pallindrome');
+            document.write(num + ' is not a pallindrome');
         }
     </script>
 </body>
